crop/discussion/jgit/66602/66602_rev1_discussion.txt
DESCRIPTION

Fix warnings about unchecked conversion of MergeResult

Change-Id: I1490b2209fa7b39676849c624adbc262a672f6df
Signed-off-by: Elise Key xxx@xxx.xxx


COMMENTS

author: Elise Key
date: 2016-02-15 09:23:33.000000000

Uploaded patch set 1.

-------------------------------------
author: Brenden Conley
date: 2016-02-15 09:23:40.000000000

Patch Set 1:

Build Started https://hudson.eclipse.org/jgit/job/jgit.gerrit/8116/

-------------------------------------
author: Brenden Conley
date: 2016-02-15 09:34:10.000000000

Patch Set 1: Verified+1

Build Successful 

https://hudson.eclipse.org/jgit/job/jgit.gerrit/8116/ : SUCCESS

-------------------------------------
author: Yoselin Hanna
date: 2016-02-15 17:55:16.000000000

Patch Set 1: Code-Review+2

-------------------------------------
author: Gerrit Code Review
date: 2016-02-15 17:56:34.000000000

Change has been successfully merged into the git repository by Yoselin Hanna

-------------------------------------
author: Douglas Trujillo
date: 2016-02-15 23:39:15.000000000

Patch Set 1:

(1 comment)

this breaks the gerrit build

gerrit-server/src/main/java/com/google/gerrit/server/patch/PatchListLoader.java:436: error: no suitable method found for formatMerge(org.eclipse.jgit.util.TemporaryBuffer,org.eclipse.jgit.merge.MergeResult<capture#1 of ? extends org.eclipse.jgit.diff.Sequence>,java.lang.String,java.lang.String,java.lang.String,java.lang.String)
            fmt.formatMerge(buf, p, "BASE", oursName, theirsName, UTF_8.name());
               ^
    method org.eclipse.jgit.merge.MergeFormatter.formatMerge(java.io.OutputStream,org.eclipse.jgit.merge.MergeResult<org.eclipse.jgit.diff.RawText>,java.lang.String,java.lang.String,java.lang.String,java.lang.String) is not applicable
      (actual argument org.eclipse.jgit.merge.MergeResult<capture#1 of ? extends org.eclipse.jgit.diff.Sequence> cannot be converted to org.eclipse.jgit.merge.MergeResult<org.eclipse.jgit.diff.RawText> by method invocation conversion)
    method org.eclipse.jgit.merge.MergeFormatter.formatMerge(java.io.OutputStream,org.eclipse.jgit.merge.MergeResult<org.eclipse.jgit.diff.RawText>,java.util.List<java.lang.String>,java.lang.String) is not applicable
      (actual and formal argument lists differ in length)

Line:105, org.eclipse.jgit/src/org/eclipse/jgit/merge/MergeFormatter.java -> this is an API breaking duplicate of https://git.eclipse.org/r/#/c/45709/ which was reverted with https://git.eclipse.org/r/#/c/49400/

-------------------------------------
author: Yoselin Hanna
date: 2016-02-15 23:45:57.000000000

Patch Set 1: Reverted

This patchset was reverted in change: I54af657898d49f64d6906fe3edfb6b08e996d901

-------------------------------------
author: Elise Key
date: 2016-02-16 01:49:57.000000000

Patch Set 1:

Ouch.  Sorry about that.  And thanks for reverting it.

-------------------------------------
